--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "nightly2version"
-version = "1.84.1"
+version = "1.84.1-1"
 edition = "2021"
 description = "`#[no_std]` and fast crate a Rust version to a timestamp and vice-versa (along other things)"
 
@@ -12,7 +12,6 @@ keywords = ["version", "nightly", "rust"]
 categories = ["date-and-time", "no-std", "rust-patterns"]
 
 [dependencies]
-anyhow = "1.0.86"
 
 [features]
 default = ["std"]
